--- a/delta_load.ipynb
+++ b/delta_load.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "bad952de-5eb4-43fb-b0cf-26ee9201a2b3",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "2e7fc599-cda5-4823-9e3c-3878f6783e84",
    "metadata": {},
    "outputs": [],
@@ -43,19 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fcb2a994-78f2-4a46-a683-2aaee7ee06f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcer = etl.convert(etl.fromcsv('../work/src.csv'), {\"modi_date\": lambda d: isodatetime(d),\"id\": int})\n",
+    "sourcer = etl.convert(etl.fromcsv('src.csv'), {\"modi_date\": lambda d: isodatetime(d),\"id\": int})\n",
     "etl.todb(table = sourcer, dbo = conn, tablename = 'source', schema='delta', drop=True)\n",
     "#CSV Load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "879486b1-3101-4abe-96cb-e67c34fdfb5c",
    "metadata": {},
    "outputs": [
