add count updates and insert separately;

--- a/delta_load.ipynb
+++ b/delta_load.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "a829909c-74ff-4a53-a5a5-799584d62875",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<h3>ETL delta load</h3>\n",
     "<p>Simple example script for delta load with using petl, pandas, sqlalchemy</p>"
@@ -11,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "id": "bad952de-5eb4-43fb-b0cf-26ee9201a2b3",
    "metadata": {},
    "outputs": [],
@@ -32,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 120,
    "id": "2e7fc599-cda5-4823-9e3c-3878f6783e84",
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = pg.connect(\"host=172.18.0.3 dbname=olist_customers_dataset user=airflow password=airflow\")\n",
-    "#Connection for database "
+    "#Connection for database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 101,
    "id": "fcb2a994-78f2-4a46-a683-2aaee7ee06f3",
    "metadata": {},
    "outputs": [],
@@ -55,9 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "id": "879486b1-3101-4abe-96cb-e67c34fdfb5c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -99,7 +103,7 @@
        "<tr>\n",
        "<td style='text-align: right'>6</td>\n",
        "<td>dd</td>\n",
-       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-11 11:33:00</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td style='text-align: right'>7</td>\n",
@@ -114,17 +118,42 @@
        "<tr>\n",
        "<td style='text-align: right'>9</td>\n",
        "<td>tt</td>\n",
-       "<td>2021-08-10 18:08:50</td>\n",
+       "<td>2021-08-11 10:47:10</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td style='text-align: right'>10</td>\n",
        "<td>gg</td>\n",
-       "<td>2021-08-10 22:43:30</td>\n",
+       "<td>2021-08-11 11:33:30</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td style='text-align: right'>11</td>\n",
        "<td>gt</td>\n",
        "<td>2021-08-10 22:43:30</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>12</td>\n",
+       "<td>vv</td>\n",
+       "<td>2021-08-11 10:00:00</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>13</td>\n",
+       "<td>gr</td>\n",
+       "<td>2021-08-11 10:47:00</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>14</td>\n",
+       "<td>ty</td>\n",
+       "<td>2021-08-11 11:30:03</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>15</td>\n",
+       "<td>hn</td>\n",
+       "<td>2021-08-11 11:33:04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>16</td>\n",
+       "<td>yy</td>\n",
+       "<td>2021-08-11 11:31:44</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n"
@@ -143,10 +172,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "id": "870954d7-d4a6-48ee-bb26-941dc9c948a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class='petl'>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>count_rec</th>\n",
+       "<th>last_e_ts</th>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>10</td>\n",
+       "<td>2021-08-11 10:48:37</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "+-----------+--------------------------------------------+\n",
+       "| count_rec | last_e_ts                                  |\n",
+       "+===========+============================================+\n",
+       "|        10 | datetime.datetime(2021, 8, 11, 10, 48, 37) |\n",
+       "+-----------+--------------------------------------------+"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delta_info = etl.fromdb(conn, 'select count(1)+1 count_rec, max(end_ts) last_e_ts from delta.delta')\n",
     "delta_info\n",
@@ -155,17 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "id": "f77b3c94-9fe5-49cb-835c-c8def6c1dbfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 8, 10, 22, 46, 19)"
+       "datetime.datetime(2021, 8, 11, 11, 44, 13)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,34 +240,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "id": "00744864-e911-438f-b6f2-44baeb293e25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 8, 11, 10, 48, 37)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lv_last_e_ts = datetime(2000,1,1,0,0,0) if delta_info['last_e_ts'][0] == None else delta_info['last_e_ts'][0] \n",
     "lv_delta_id = delta_info['count_rec'][0]\n",
     "lv_last_e_ts\n",
-    "#Setting delta_id and last_e_ts\n"
+    "#Setting delta_id and last_e_ts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "id": "d93441b7-066c-469b-a15e-46bff72715ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>modi_date</th>\n",
+       "      <th>ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>dd</td>\n",
+       "      <td>2021-08-11 11:33:00</td>\n",
+       "      <td>2021-08-11 11:44:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>2021-08-11 11:33:30</td>\n",
+       "      <td>2021-08-11 11:44:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "      <td>ty</td>\n",
+       "      <td>2021-08-11 11:30:03</td>\n",
+       "      <td>2021-08-11 11:44:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>hn</td>\n",
+       "      <td>2021-08-11 11:33:04</td>\n",
+       "      <td>2021-08-11 11:44:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16</td>\n",
+       "      <td>yy</td>\n",
+       "      <td>2021-08-11 11:31:44</td>\n",
+       "      <td>2021-08-11 11:44:13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id name           modi_date                  ts\n",
+       "0   6   dd 2021-08-11 11:33:00 2021-08-11 11:44:13\n",
+       "1  10   gg 2021-08-11 11:33:30 2021-08-11 11:44:13\n",
+       "2  14   ty 2021-08-11 11:30:03 2021-08-11 11:44:13\n",
+       "3  15   hn 2021-08-11 11:33:04 2021-08-11 11:44:13\n",
+       "4  16   yy 2021-08-11 11:31:44 2021-08-11 11:44:13"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rec = etl.addfield(etl.select(source, \\\n",
-    "                lambda rec: rec.modi_date >= lv_last_e_ts and rec.modi_date < now), 'ts', now)\n",
+    "rec = etl.addfield(etl.select(source, lambda rec: rec.modi_date >= lv_last_e_ts and rec.modi_date < now), 'ts', now)\n",
     "values = etl.todataframe(rec)\n",
     "values\n",
-    "#Selecting data by timestamp filter"
+    "#Select data by timestamp filter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
+   "id": "2d21b6cc-c40f-49e1-a86f-b95eb6d5f624",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class='petl'>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>id</th>\n",
+       "<th>name</th>\n",
+       "<th>modi_date</th>\n",
+       "<th>ts</th>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>1</td>\n",
+       "<td>dd</td>\n",
+       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>2</td>\n",
+       "<td>ff</td>\n",
+       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>3</td>\n",
+       "<td>dd</td>\n",
+       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>4</td>\n",
+       "<td>l2</td>\n",
+       "<td>2021-08-10 10:50:59</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>5</td>\n",
+       "<td>rr</td>\n",
+       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>6</td>\n",
+       "<td>dd</td>\n",
+       "<td>2021-08-09 22:03:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>7</td>\n",
+       "<td>fd</td>\n",
+       "<td>2021-08-10 18:02:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>8</td>\n",
+       "<td>rr</td>\n",
+       "<td>2021-08-10 18:05:00</td>\n",
+       "<td>2021-08-10 21:56:50</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>10</td>\n",
+       "<td>gg</td>\n",
+       "<td>2021-08-10 22:43:30</td>\n",
+       "<td>2021-08-10 22:46:19</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>11</td>\n",
+       "<td>gt</td>\n",
+       "<td>2021-08-10 22:43:30</td>\n",
+       "<td>2021-08-10 22:46:19</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>12</td>\n",
+       "<td>vv</td>\n",
+       "<td>2021-08-11 10:00:00</td>\n",
+       "<td>2021-08-11 10:03:28</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>9</td>\n",
+       "<td>tt</td>\n",
+       "<td>2021-08-11 10:47:10</td>\n",
+       "<td>2021-08-11 10:48:37</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>13</td>\n",
+       "<td>gr</td>\n",
+       "<td>2021-08-11 10:47:00</td>\n",
+       "<td>2021-08-11 10:48:37</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "delta_reciever = etl.fromdb(conn, 'select * from delta.reciever')\n",
+    "delta_reciever.display(20)\n",
+    "#Recieve table from db for count updates and inserts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "e1309c61-cba9-4092-be82-ebc5413934e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt_upd = len(values[values['id'].isin(list(delta_reciever['id']))])\n",
+    "cnt_ins = len(values)-cnt_upd\n",
+    "print(cnt_upd, cnt_ins)\n",
+    "#Count updates and inserts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "id": "373930b0-f53c-4dd7-b354-904a7120f1e2",
    "metadata": {},
    "outputs": [],
@@ -219,14 +502,14 @@
     "                INSERT INTO delta.reciever (id, name, modi_date, ts)\n",
     "                SELECT {','.join([str(i)]).replace('(','').replace(')','')}\n",
     "                WHERE NOT EXISTS (SELECT 1 FROM delta.reciever WHERE id={int(i[0])});\n",
-    "         \"\"\")\n",
+    "                 \"\"\")\n",
     "    engine.execute(query)\n",
     "#Upsert to recieve table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 118,
    "id": "907d5d3e-dd55-48ab-ab06-ae88cdb4260c",
    "metadata": {},
    "outputs": [
@@ -241,44 +524,45 @@
        "<th>end_ts</th>\n",
        "<th>delta_obj</th>\n",
        "<th>ts</th>\n",
-       "<th>cn_r</th>\n",
+       "<th>cn_u</th>\n",
+       "<th>cn_i</th>\n",
        "</tr>\n",
        "</thead>\n",
        "<tbody>\n",
        "<tr>\n",
-       "<td style='text-align: right'>4</td>\n",
-       "<td>2021-08-10 22:42:14</td>\n",
-       "<td>2021-08-10 22:46:19</td>\n",
+       "<td style='text-align: right'>10</td>\n",
+       "<td>2021-08-11 10:48:37</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
        "<td>delta_1</td>\n",
-       "<td>2021-08-10 22:46:19</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
        "<td style='text-align: right'>2</td>\n",
+       "<td style='text-align: right'>3</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+\n",
-       "| id | start_ts                                   | end_ts                                     | delta_obj | ts                                         | cn_r |\n",
-       "+====+============================================+============================================+===========+============================================+======+\n",
-       "|  4 | datetime.datetime(2021, 8, 10, 22, 42, 14) | datetime.datetime(2021, 8, 10, 22, 46, 19) | 'delta_1' | datetime.datetime(2021, 8, 10, 22, 46, 19) |    2 |\n",
-       "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+"
+       "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+------+\n",
+       "| id | start_ts                                   | end_ts                                     | delta_obj | ts                                         | cn_u | cn_i |\n",
+       "+====+============================================+============================================+===========+============================================+======+======+\n",
+       "| 10 | datetime.datetime(2021, 8, 11, 10, 48, 37) | datetime.datetime(2021, 8, 11, 11, 44, 13) | 'delta_1' | datetime.datetime(2021, 8, 11, 11, 44, 13) |    2 |    3 |\n",
+       "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+------+"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cn_r = len(values)\n",
-    "delta_table_new = etl.setheader([['id','start_ts','end_ts','delta_obj','ts','cn_r'],[lv_delta_id,lv_last_e_ts,now,'delta_1',now,cn_r]],['id','start_ts','end_ts','delta_obj','ts','cn_r'])\n",
+    "delta_table_new = etl.setheader([['id','start_ts','end_ts','delta_obj','ts','cn_r'],[lv_delta_id,lv_last_e_ts,now,'delta_1',now,cnt_upd, cnt_ins]],['id','start_ts','end_ts','delta_obj','ts','cn_u','cn_i'])\n",
     "delta_table_new\n",
     "#Creating delta info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 121,
    "id": "eddf97c2-6e8f-4474-a297-23a7859e5514",
    "metadata": {},
    "outputs": [],
