--- a/delta_load.ipynb
+++ b/delta_load.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "bad952de-5eb4-43fb-b0cf-26ee9201a2b3",
    "metadata": {},
    "outputs": [],
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "2e7fc599-cda5-4823-9e3c-3878f6783e84",
+   "execution_count": 2,
+   "id": "2215efcb-7527-49e3-b183-feca7715abc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = pg.connect(\"host=172.18.0.3 dbname=olist_customers_dataset user=airflow password=airflow\")\n",
+    "conn = pg.connect('host=172.18.0.3 dbname=olist_customers_dataset user=airflow password=airflow')\n",
     "#Connection for database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "fcb2a994-78f2-4a46-a683-2aaee7ee06f3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "id": "879486b1-3101-4abe-96cb-e67c34fdfb5c",
    "metadata": {
     "tags": []
@@ -153,7 +153,12 @@
        "<tr>\n",
        "<td style='text-align: right'>16</td>\n",
        "<td>yy</td>\n",
-       "<td>2021-08-11 11:31:44</td>\n",
+       "<td>2021-08-11 15:26:30</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>17</td>\n",
+       "<td>bc</td>\n",
+       "<td>2021-08-11 15:26:30</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n"
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "870954d7-d4a6-48ee-bb26-941dc9c948a1",
    "metadata": {},
    "outputs": [
@@ -188,8 +193,8 @@
        "</thead>\n",
        "<tbody>\n",
        "<tr>\n",
-       "<td style='text-align: right'>10</td>\n",
-       "<td>2021-08-11 10:48:37</td>\n",
+       "<td style='text-align: right'>12</td>\n",
+       "<td>2021-08-11 15:26:13</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n"
@@ -198,11 +203,11 @@
        "+-----------+--------------------------------------------+\n",
        "| count_rec | last_e_ts                                  |\n",
        "+===========+============================================+\n",
-       "|        10 | datetime.datetime(2021, 8, 11, 10, 48, 37) |\n",
+       "|        12 | datetime.datetime(2021, 8, 11, 15, 26, 13) |\n",
        "+-----------+--------------------------------------------+"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "f77b3c94-9fe5-49cb-835c-c8def6c1dbfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 8, 11, 11, 44, 13)"
+       "datetime.datetime(2021, 8, 11, 15, 26, 59)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,17 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "00744864-e911-438f-b6f2-44baeb293e25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 8, 11, 10, 48, 37)"
+       "datetime.datetime(2021, 8, 11, 15, 26, 13)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "id": "d93441b7-066c-469b-a15e-46bff72715ed",
    "metadata": {},
    "outputs": [
@@ -298,38 +303,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>dd</td>\n",
-       "      <td>2021-08-11 11:33:00</td>\n",
-       "      <td>2021-08-11 11:44:13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>yy</td>\n",
+       "      <td>2021-08-11 15:26:30</td>\n",
+       "      <td>2021-08-11 15:26:59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>gg</td>\n",
-       "      <td>2021-08-11 11:33:30</td>\n",
-       "      <td>2021-08-11 11:44:13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>14</td>\n",
-       "      <td>ty</td>\n",
-       "      <td>2021-08-11 11:30:03</td>\n",
-       "      <td>2021-08-11 11:44:13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>15</td>\n",
-       "      <td>hn</td>\n",
-       "      <td>2021-08-11 11:33:04</td>\n",
-       "      <td>2021-08-11 11:44:13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>16</td>\n",
-       "      <td>yy</td>\n",
-       "      <td>2021-08-11 11:31:44</td>\n",
-       "      <td>2021-08-11 11:44:13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>bc</td>\n",
+       "      <td>2021-08-11 15:26:30</td>\n",
+       "      <td>2021-08-11 15:26:59</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,14 +321,11 @@
       ],
       "text/plain": [
        "   id name           modi_date                  ts\n",
-       "0   6   dd 2021-08-11 11:33:00 2021-08-11 11:44:13\n",
-       "1  10   gg 2021-08-11 11:33:30 2021-08-11 11:44:13\n",
-       "2  14   ty 2021-08-11 11:30:03 2021-08-11 11:44:13\n",
-       "3  15   hn 2021-08-11 11:33:04 2021-08-11 11:44:13\n",
-       "4  16   yy 2021-08-11 11:31:44 2021-08-11 11:44:13"
+       "0  16   yy 2021-08-11 15:26:30 2021-08-11 15:26:59\n",
+       "1  17   bc 2021-08-11 15:26:30 2021-08-11 15:26:59"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "id": "2d21b6cc-c40f-49e1-a86f-b95eb6d5f624",
    "metadata": {},
    "outputs": [
@@ -406,12 +387,6 @@
        "<td>2021-08-10 21:56:50</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "<td style='text-align: right'>6</td>\n",
-       "<td>dd</td>\n",
-       "<td>2021-08-09 22:03:00</td>\n",
-       "<td>2021-08-10 21:56:50</td>\n",
-       "</tr>\n",
-       "<tr>\n",
        "<td style='text-align: right'>7</td>\n",
        "<td>fd</td>\n",
        "<td>2021-08-10 18:02:00</td>\n",
@@ -422,12 +397,6 @@
        "<td>rr</td>\n",
        "<td>2021-08-10 18:05:00</td>\n",
        "<td>2021-08-10 21:56:50</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td style='text-align: right'>10</td>\n",
-       "<td>gg</td>\n",
-       "<td>2021-08-10 22:43:30</td>\n",
-       "<td>2021-08-10 22:46:19</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td style='text-align: right'>11</td>\n",
@@ -453,6 +422,36 @@
        "<td>2021-08-11 10:47:00</td>\n",
        "<td>2021-08-11 10:48:37</td>\n",
        "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>6</td>\n",
+       "<td>dd</td>\n",
+       "<td>2021-08-11 11:33:00</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>10</td>\n",
+       "<td>gg</td>\n",
+       "<td>2021-08-11 11:33:30</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>14</td>\n",
+       "<td>ty</td>\n",
+       "<td>2021-08-11 11:30:03</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>15</td>\n",
+       "<td>hn</td>\n",
+       "<td>2021-08-11 11:33:04</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style='text-align: right'>16</td>\n",
+       "<td>yy</td>\n",
+       "<td>2021-08-11 11:31:44</td>\n",
+       "<td>2021-08-11 11:44:13</td>\n",
+       "</tr>\n",
        "</tbody>\n",
        "</table>\n"
       ]
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "e1309c61-cba9-4092-be82-ebc5413934e9",
    "metadata": {},
    "outputs": [
@@ -477,7 +476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 3\n"
+      "1 1\n"
      ]
     }
    ],
@@ -490,14 +489,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "id": "373930b0-f53c-4dd7-b354-904a7120f1e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('postgresql://airflow:airflow@172.18.0.3/olist_customers_dataset')\n",
     "for i in list(values.to_records(index=False)):\n",
-    "    query = text(f\"\"\"UPDATE delta.reciever\n",
+    "    query = text(f\"\"\"\n",
+    "                UPDATE delta.reciever\n",
     "                SET name='{str(i[1])}', modi_date='{str(i[2])}', ts='{str(i[3])}' WHERE id={int(i[0])};\n",
     "                INSERT INTO delta.reciever (id, name, modi_date, ts)\n",
     "                SELECT {','.join([str(i)]).replace('(','').replace(')','')}\n",
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "id": "907d5d3e-dd55-48ab-ab06-ae88cdb4260c",
    "metadata": {},
    "outputs": [
@@ -530,13 +530,13 @@
        "</thead>\n",
        "<tbody>\n",
        "<tr>\n",
-       "<td style='text-align: right'>10</td>\n",
-       "<td>2021-08-11 10:48:37</td>\n",
-       "<td>2021-08-11 11:44:13</td>\n",
+       "<td style='text-align: right'>12</td>\n",
+       "<td>2021-08-11 15:26:13</td>\n",
+       "<td>2021-08-11 15:26:59</td>\n",
        "<td>delta_1</td>\n",
-       "<td>2021-08-11 11:44:13</td>\n",
-       "<td style='text-align: right'>2</td>\n",
-       "<td style='text-align: right'>3</td>\n",
+       "<td>2021-08-11 15:26:59</td>\n",
+       "<td style='text-align: right'>1</td>\n",
+       "<td style='text-align: right'>1</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n"
@@ -545,24 +545,26 @@
        "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+------+\n",
        "| id | start_ts                                   | end_ts                                     | delta_obj | ts                                         | cn_u | cn_i |\n",
        "+====+============================================+============================================+===========+============================================+======+======+\n",
-       "| 10 | datetime.datetime(2021, 8, 11, 10, 48, 37) | datetime.datetime(2021, 8, 11, 11, 44, 13) | 'delta_1' | datetime.datetime(2021, 8, 11, 11, 44, 13) |    2 |    3 |\n",
+       "| 12 | datetime.datetime(2021, 8, 11, 15, 26, 13) | datetime.datetime(2021, 8, 11, 15, 26, 59) | 'delta_1' | datetime.datetime(2021, 8, 11, 15, 26, 59) |    1 |    1 |\n",
        "+----+--------------------------------------------+--------------------------------------------+-----------+--------------------------------------------+------+------+"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "delta_table_new = etl.setheader([['id','start_ts','end_ts','delta_obj','ts','cn_r'],[lv_delta_id,lv_last_e_ts,now,'delta_1',now,cnt_upd, cnt_ins]],['id','start_ts','end_ts','delta_obj','ts','cn_u','cn_i'])\n",
+    "delta_table_new = etl.setheader([['id','start_ts','end_ts','delta_obj','ts','cn_r'],\\\n",
+    "                                 [lv_delta_id,lv_last_e_ts,now,'delta_1',now,cnt_upd, cnt_ins]],\\\n",
+    "                                ['id','start_ts','end_ts','delta_obj','ts','cn_u','cn_i'])\n",
     "delta_table_new\n",
     "#Creating delta info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "id": "eddf97c2-6e8f-4474-a297-23a7859e5514",
    "metadata": {},
    "outputs": [],
